--- a/lms/templates/lms/dashboard.html
+++ b/lms/templates/lms/dashboard.html
@@ -115,6 +115,9 @@
   <a href="{% url 'lms_create_game' %}" class="btn btn-success mb-3">+ Create New Game</a>
 </p>
 
+<p>
+    <a class="btn btn-info" href="{% url 'lms_rules' %}">LMS Rules</a>
+</p>
 {% else %}
   <h2>Last Man Standing</h2>
   <p>You are not logged in.</p>
